Fixing responsiveness on mobile using bootstrap

--- a/css/meow.css
+++ b/css/meow.css
@@ -1,274 +1,18 @@
 body{
-    background: #F6F9FC;
+    background-color: #F6F9FC !important;
+    font-family: "Source Code Pro" !important;
+}
+
+
+.header{
+    font-family: "Open Sans" !important;
 }
 
 .container{
-    display: grid;
-    grid-template-rows: 1fr 4.5fr 4.5fr;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:
-        "headertitle headerlinks"
-        "mainp mainp"
-        "projects projects";
-    grid-gap: 3fr;
-    font-family: 'Source Sans Pro', sans-serif;
-    background: #F6F9FC;
+    padding: 2em !important;
 }
 
-.ht{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 4.5em;
-    margin-left: 40%;
-    color: #6B7C93;
-    text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-    margin-top: .5em;
-}
-
-.links{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.5em;
-    margin-top: 2.8em;
-    margin-right: 5%;
-    color: #6B7C93;
-}
-
-#resume{
-    position: relative;
-    top: 30px;
-    left: 58px;
-}
-
-#projecti{
-    position: relative;
-    top: 30px;
-    left: 56px;
-}
-
-#github{
-    position: relative;
-    top: 30px;
-    left: 55px;
-}
-
-#linkedin{
-    position: relative;
-    top: 30px;
-    left: 60px;
-}
-
-#contact{
-    position: relative;
-    top: 30px;
-    left: 57px;
-}
-
-headertitle{
-    grid-area: headertitle;
-}
-
-headerlinks{
-    grid-area: headerlinks;
-}
-
-mainp{
-    grid-area: mainp;
-    text-align: center;
-    font-size: 2.25em;
-    color: #6B7C93;
-    margin-left: 10.5em;
-    margin-right: 10.5em;
-    margin-top: 7em;
-}
-
-#mp{
-    margin-bottom: 5em;
-}
-
-#skills{
-    font-size: .85em;
-    width: 80px;
-    height: 40px;
-    display: block;
-    color: #6B7C93;
-    border: 2px solid #3ECF8C ;
-    border-collapse: separate;
-    perspective: 1px;
-    -moz-border-image: -moz-linear-gradient(top, #3ECF8C 0%, #408AF8 100%);
-    -webkit-border-image: -webkit-linear-gradient(top, #3ECF8C 0%, #408AF8 100%);
-    border-image: linear-gradient(to right, #3ECF8C 0%, #408AF8 100%);
-    border-image-slice: 1;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: .8em;
-    /*border-style: none;
-    border-radius: 90px;
-    box-shadow: 0px 10px 15px rgba(107, 124, 147, 0.2);
-    border-image: linear-gradient(#3ECF8C, #408AF8) 30;*/
-}
-
-.webskills{
-    font-size: .6em;
-    display: inline;
-    margin-right: 20px;
-    float: left;
-    width: 60px;
-    height: 30px;
-    color: #6B7C93;
-    border: 2px solid #3ECF8C;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-#js{
-    width:120px;
-}
-
-.langskills {
-    font-size: .6em;
-    display: inline;
-    margin-right: 20px;
-    float: left;
-    width: 60px;
-    height: 30px;
-    color: #6B7C93;
-    border: 2px solid #408AF8;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-#pyt{
-    width: 80px;
-}
-
-#r{
-    width: 35px;
-}
-
-#projec{
-    font-size: 2em;
-    text-align: center;
-    display: block;
-    margin-right: 20px;
-    margin-top: 200px;
-    margin-left: 11.8em;
-    float: left;
-    width: 120px;
-    height: 45px;
-    color: #6B7C93;
-    border: 2px solid #6772E5;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-
-#firstpr{
-    width: 1164px;
-    position: relative;
-    height: 522px;
-    left: 378px;
-    top: 300px;
-    /*border: 5px solid red;*/
-    margin-bottom: 300px;
-    background: #F6F9FC;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
-}
-
-
-#firsttex{
-    position: absolute;
-    left: 80px;
-    top: 70px;
-    font-style: normal;
-    font-weight: bold;
-    line-height: 30px;
-    font-size: 36px;
-
-    color: #6B7C93;
-}
-
-#firstprsk{
-    position: absolute;
-    left: 80px;
-    top: 70px;
-}
-
-.f1skills {
-    font-size: 1.4em;
-    text-align: center;
-    display: inline;
-    margin-top: 50px;
-    margin-right: 20px;
-    float: left;
-    width: 60px;
-    height: 30px;
-    color: #6B7C93;
-    border: 2px solid #6772E5;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-#f1js{
-    width: 110px;
-}
-
-#firstprtexb{
-    font-size: 1.2em;
-    line-height: 1.5em;
-    position: absolute;
-    color: #6B7C93;
-    left: 80px;
-    top: 180px;
-    width: 300px;
-}
-
-#f1colorbox{
-    position: absolute;
-    color: #F6F9FC;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    line-height: 2.25em;
-    width: 109px;
-    height: 38px;
-    left: 80px;
-    top: 400px;
-
-    background: linear-gradient(90deg, #408AF8 0%, #3ECF8C 100%);
-    box-shadow: 0px 5px 15px rgba(64, 138, 248, 0.5);
-    border-radius: 90px;
-}
-
-#f1explore{
-    position: relative;
-    top: 8px;
-    left: 5px;
-}
-
-#f1-car{
-    position: relative;
-    bottom: 270px;
-    left: 450px;
-}
-
-.car{
-    width: 680px;
-}
-
-#f1-map{
-    position:relative;
-    bottom: 660px;
-    left: 550px;
-}
-
-.map{
-    width:180px;
-}
-
-projects{
-    grid-area: projects;
-}
-
-
-.feather {
-    width: 24px;
-    height: 24px;
-    stroke: currentColor;
-    stroke-width: 2;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    fill: none;
+object{
+    width: 100%;
+    max-height: 300px;
 }
